Minor change to correct offset problem for Cart popup. Libraries with opacheader markup specified were finding their Cart popup appearing out of place.

--- a/koha-tmpl/opac-tmpl/prog/en/css/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/css/opac.css
@@ -554,7 +554,6 @@ a .term {
 	margin-left : -10px;
 	margin-right : -10px;
 	padding : .7em 0 .4em .5em;
-	position : relative;
 	font-size : 108%;
 	line-height : 116%;
 }
